--- a/career.html
+++ b/career.html
@@ -712,12 +712,23 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <!-- Company Info with Logo and Address -->
           <div class="md:col-span-1">
+            <!-- <div class="mb-6">
+              <img
+                src="Images/Logo.png"
+                alt="Terrapure Logo"
+                class="h-20 bg-white p-2 rounded-lg shadow-md"
+              />
+            </div> -->
+            <!-- <p class="text-teal-100 mb-4 text-sm leading-relaxed">
+              Leading environmental solutions provider specializing in water and
+              wastewater treatment systems for sustainable future.
+            </p> -->
             <div class="text-white text-lg">
               <p class="font-semibold mb-2">Office Address:</p>
               <a
                 href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101"
                 target="_blank"
-                class="hover:text-white text-md transition-colors block responsive-text"
+                class="hover:text-white text-md transition-colors block"
               >
                 Office No. 301, 7 Bizz Sonigara Business Complex,<br />
                 Ravet BRT Road, Pune – 412101,<br />
@@ -737,7 +748,7 @@
               <li>
                 <a
                   href="index.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
@@ -748,7 +759,7 @@
               <li>
                 <a
                   href="about.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
@@ -758,8 +769,19 @@
               </li>
               <li>
                 <a
+                  href="clients.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Clients
+                </a>
+              </li>
+              <li>
+                <a
                   href="career.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
@@ -770,7 +792,7 @@
               <li>
                 <a
                   href="contact.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
@@ -791,8 +813,8 @@
             <ul class="space-y-3">
               <li>
                 <a
-                  href="services.html#ro"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  href="RO.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-tint text-xs mr-2"></i>
                   RO Plants
@@ -800,8 +822,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#stp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  href="sewage.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-recycle text-xs mr-2"></i>
                   Sewage Treatment
@@ -809,8 +831,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#etp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  href="ETP.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-industry text-xs mr-2"></i>
                   Effluent Treatment
@@ -818,8 +840,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#zld"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  href="ZLD.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-infinity text-xs mr-2"></i>
                   ZLD Systems
@@ -827,8 +849,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#softeners"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
+                  href="water-softener-plant.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-filter text-xs mr-2"></i>
                   Water Softeners
@@ -855,7 +877,7 @@
                 <div>
                   <a
                     href="tel:+919921174727"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium responsive-text"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
                     >+91 9921174727</a
                   >
                 </div>
@@ -871,12 +893,12 @@
                 <div>
                   <a
                     href="mailto:enquiry@tpes.in"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium responsive-text"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
                     >enquiry@tpes.in</a
                   >
                   <a
                     href="mailto:info@tpes.in"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium responsive-text"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
                     >info@tpes.in</a
                   >
                 </div>
@@ -925,18 +947,18 @@
           <div
             class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0"
           >
-            <div class="text-teal-200 text-sm text-center md:text-left responsive-text">
+            <div class="text-teal-200 text-sm text-center md:text-left">
               <p>
                 &copy; 2025 Terrapure Environment Services Pvt. Ltd. All rights
                 reserved.
               </p>
             </div>
             <div class="flex space-x-6 text-sm text-teal-200">
-              <a href="#" class="hover:text-white transition-colors responsive-text"
+              <a href="privacypoilcy.html" class="hover:text-white transition-colors"
                 >Privacy Policy</a
               >
-              <a href="#" class="hover:text-white transition-colors responsive-text"
-                >Terms of Service</a
+              <a href="https://www.kunashmedia.com" class="hover:text-white transition-colors"
+                >Developed by Kunash Media Solutions</a
               >
             </div>
           </div>
