--- a/privacypoilcy.html
+++ b/privacypoilcy.html
@@ -890,7 +890,7 @@
     </section>
 
     <!-- Footer -->
-    <footer
+   <footer
       class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
     >
       <!-- Top Border Curve -->
@@ -902,6 +902,17 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <!-- Company Info with Logo and Address -->
           <div class="md:col-span-1">
+            <!-- <div class="mb-6">
+              <img
+                src="Images/Logo.png"
+                alt="Terrapure Logo"
+                class="h-20 bg-white p-2 rounded-lg shadow-md"
+              />
+            </div> -->
+            <!-- <p class="text-teal-100 mb-4 text-sm leading-relaxed">
+              Leading environmental solutions provider specializing in water and
+              wastewater treatment systems for sustainable future.
+            </p> -->
             <div class="text-white text-lg">
               <p class="font-semibold mb-2">Office Address:</p>
               <a
@@ -992,7 +1003,7 @@
             <ul class="space-y-3">
               <li>
                 <a
-                  href="services.html#ro"
+                  href="RO.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-tint text-xs mr-2"></i>
@@ -1001,7 +1012,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#stp"
+                  href="sewage.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-recycle text-xs mr-2"></i>
@@ -1010,7 +1021,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#etp"
+                  href="ETP.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-industry text-xs mr-2"></i>
@@ -1019,7 +1030,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#zld"
+                  href="ZLD.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-infinity text-xs mr-2"></i>
@@ -1028,7 +1039,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#softeners"
+                  href="water-softener-plant.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-filter text-xs mr-2"></i>
@@ -1133,13 +1144,11 @@
               </p>
             </div>
             <div class="flex space-x-6 text-sm text-teal-200">
-              <a
-                href="privacy-policy.html"
-                class="hover:text-white transition-colors font-semibold"
+              <a href="privacypoilcy.html" class="hover:text-white transition-colors"
                 >Privacy Policy</a
               >
-              <a href="#" class="hover:text-white transition-colors"
-                >Terms of Service</a
+              <a href="https://www.kunashmedia.com" class="hover:text-white transition-colors"
+                >Developed by Kunash Media Solutions</a
               >
             </div>
           </div>
