--- a/water-softener-plant.html
+++ b/water-softener-plant.html
@@ -778,24 +778,35 @@
     </section>
 
     <!-- Footer -->
-    <footer
-      class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8 overflow-hidden"
+     <footer
+      class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
     >
       <!-- Top Border Curve -->
       <div
         class="absolute top-0 left-0 right-0 h-8 bg-white rounded-b-full"
       ></div>
 
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10 overflow-hidden">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-8 overflow-hidden">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <!-- Company Info with Logo and Address -->
-          <div class="md:col-span-1 overflow-hidden">
-            <div class="text-white text-lg overflow-hidden">
-              <p class="font-semibold mb-2 text-wrap-fix">Office Address:</p>
+          <div class="md:col-span-1">
+            <!-- <div class="mb-6">
+              <img
+                src="Images/Logo.png"
+                alt="Terrapure Logo"
+                class="h-20 bg-white p-2 rounded-lg shadow-md"
+              />
+            </div> -->
+            <!-- <p class="text-teal-100 mb-4 text-sm leading-relaxed">
+              Leading environmental solutions provider specializing in water and
+              wastewater treatment systems for sustainable future.
+            </p> -->
+            <div class="text-white text-lg">
+              <p class="font-semibold mb-2">Office Address:</p>
               <a
                 href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101"
                 target="_blank"
-                class="hover:text-white text-md transition-colors block text-wrap-fix"
+                class="hover:text-white text-md transition-colors block"
               >
                 Office No. 301, 7 Bizz Sonigara Business Complex,<br />
                 Ravet BRT Road, Pune – 412101,<br />
@@ -805,165 +816,176 @@
           </div>
 
           <!-- Quick Links -->
-          <div class="overflow-hidden">
+          <div>
             <h3
-              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2 text-wrap-fix"
+              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2"
             >
               Quick Links
             </h3>
-            <ul class="space-y-3 overflow-hidden">
-              <li class="overflow-hidden">
+            <ul class="space-y-3">
+              <li>
                 <a
                   href="index.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
                   ></i>
-                  <span class="text-wrap-fix">Home</span>
+                  Home
                 </a>
               </li>
-              <li class="overflow-hidden">
+              <li>
                 <a
                   href="about.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
                   ></i>
-                  <span class="text-wrap-fix">About Us</span>
+                  About Us
                 </a>
               </li>
-              <li class="overflow-hidden">
+              <li>
+                <a
+                  href="clients.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Clients
+                </a>
+              </li>
+              <li>
                 <a
                   href="career.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
                   ></i>
-                  <span class="text-wrap-fix">Career</span>
+                  Career
                 </a>
               </li>
-              <li class="overflow-hidden">
+              <li>
                 <a
                   href="contact.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
                   ></i>
-                  <span class="text-wrap-fix">Contact</span>
+                  Contact
                 </a>
               </li>
             </ul>
           </div>
 
           <!-- Our Services -->
-          <div class="overflow-hidden">
+          <div>
             <h3
-              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2 text-wrap-fix"
+              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2"
             >
               Our Services
             </h3>
-            <ul class="space-y-3 overflow-hidden">
-              <li class="overflow-hidden">
+            <ul class="space-y-3">
+              <li>
                 <a
-                  href="services.html#ro"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  href="RO.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-tint text-xs mr-2"></i>
-                  <span class="text-wrap-fix">RO Plants</span>
+                  RO Plants
                 </a>
               </li>
-              <li class="overflow-hidden">
+              <li>
                 <a
-                  href="services.html#stp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  href="sewage.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-recycle text-xs mr-2"></i>
-                  <span class="text-wrap-fix">Sewage Treatment</span>
+                  Sewage Treatment
                 </a>
               </li>
-              <li class="overflow-hidden">
+              <li>
                 <a
-                  href="services.html#etp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  href="ETP.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-industry text-xs mr-2"></i>
-                  <span class="text-wrap-fix">Effluent Treatment</span>
+                  Effluent Treatment
                 </a>
               </li>
-              <li class="overflow-hidden">
+              <li>
                 <a
-                  href="services.html#zld"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  href="ZLD.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-infinity text-xs mr-2"></i>
-                  <span class="text-wrap-fix">ZLD Systems</span>
+                  ZLD Systems
                 </a>
               </li>
-              <li class="overflow-hidden">
+              <li>
                 <a
-                  href="services.html#softeners"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group overflow-hidden"
+                  href="water-softener-plant.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-filter text-xs mr-2"></i>
-                  <span class="text-wrap-fix">Water Softeners</span>
+                  Water Softeners
                 </a>
               </li>
             </ul>
           </div>
 
           <!-- Connect With Us -->
-          <div class="overflow-hidden">
+          <div>
             <h3
-              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2 text-wrap-fix"
+              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2"
             >
               Connect With Us
             </h3>
-            <div class="space-y-4 overflow-hidden">
+            <div class="space-y-4">
               <!-- Phone Numbers -->
-              <div class="flex items-start overflow-hidden">
+              <div class="flex items-start">
                 <div
                   class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3"
                 >
                   <i class="fas fa-phone text-white text-xs"></i>
                 </div>
-                <div class="overflow-hidden">
+                <div>
                   <a
                     href="tel:+919921174727"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium text-wrap-fix"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
                     >+91 9921174727</a
                   >
                 </div>
               </div>
 
               <!-- Email Addresses -->
-              <div class="flex items-start overflow-hidden">
+              <div class="flex items-start">
                 <div
                   class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1"
                 >
                   <i class="fas fa-envelope text-white text-xs"></i>
                 </div>
-                <div class="overflow-hidden">
+                <div>
                   <a
                     href="mailto:enquiry@tpes.in"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium text-wrap-fix"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
                     >enquiry@tpes.in</a
                   >
                   <a
                     href="mailto:info@tpes.in"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium text-wrap-fix"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
                     >info@tpes.in</a
                   >
                 </div>
               </div>
 
               <!-- Social Media Icons -->
-              <div class="pt-2 overflow-hidden">
-                <p class="text-teal-100 text-sm mb-3 text-wrap-fix">Follow us on:</p>
-                <div class="flex space-x-3 overflow-hidden">
+              <div class="pt-2">
+                <p class="text-teal-100 text-sm mb-3">Follow us on:</p>
+                <div class="flex space-x-3">
                   <a
                     href="#"
                     class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
@@ -999,22 +1021,22 @@
         </div>
 
         <!-- Bottom Section -->
-        <div class="border-t border-teal-700 mt-12 pt-8 overflow-hidden">
+        <div class="border-t border-teal-700 mt-12 pt-8">
           <div
-            class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 overflow-hidden"
+            class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0"
           >
-            <div class="text-teal-200 text-sm text-center md:text-left overflow-hidden">
-              <p class="text-wrap-fix">
+            <div class="text-teal-200 text-sm text-center md:text-left">
+              <p>
                 &copy; 2025 Terrapure Environment Services Pvt. Ltd. All rights
                 reserved.
               </p>
             </div>
-            <div class="flex space-x-6 text-sm text-teal-200 overflow-hidden">
-              <a href="#" class="hover:text-white transition-colors text-wrap-fix"
+            <div class="flex space-x-6 text-sm text-teal-200">
+              <a href="privacypoilcy.html" class="hover:text-white transition-colors"
                 >Privacy Policy</a
               >
-              <a href="#" class="hover:text-white transition-colors text-wrap-fix"
-                >Terms of Service</a
+              <a href="https://www.kunashmedia.com" class="hover:text-white transition-colors"
+                >Developed by Kunash Media Solutions</a
               >
             </div>
           </div>
