--- a/RO.html
+++ b/RO.html
@@ -998,7 +998,7 @@
     </section>
 
     <!-- Footer -->
-   <footer
+    <footer
       class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
     >
       <!-- Top Border Curve -->
@@ -1065,12 +1065,17 @@
                   About Us
                 </a>
               </li>
-              <!-- <li>
-              <a href="services.html" class="text-teal-100 hover:text-white transition-colors flex items-center group">
-                <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
-                Services
-              </a>
-            </li> -->
+              <li>
+                <a
+                  href="clients.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Clients
+                </a>
+              </li>
               <li>
                 <a
                   href="career.html"
@@ -1106,7 +1111,7 @@
             <ul class="space-y-3">
               <li>
                 <a
-                  href="services.html#ro"
+                  href="RO.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-tint text-xs mr-2"></i>
@@ -1115,7 +1120,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#stp"
+                  href="sewage.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-recycle text-xs mr-2"></i>
@@ -1124,7 +1129,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#etp"
+                  href="ETP.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-industry text-xs mr-2"></i>
@@ -1133,7 +1138,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#zld"
+                  href="ZLD.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-infinity text-xs mr-2"></i>
@@ -1142,7 +1147,7 @@
               </li>
               <li>
                 <a
-                  href="services.html#softeners"
+                  href="water-softener-plant.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-filter text-xs mr-2"></i>
@@ -1247,18 +1252,17 @@
               </p>
             </div>
             <div class="flex space-x-6 text-sm text-teal-200">
-              <a href="#" class="hover:text-white transition-colors"
+              <a href="privacypoilcy.html" class="hover:text-white transition-colors"
                 >Privacy Policy</a
               >
-              <a href="#" class="hover:text-white transition-colors"
-                >Terms of Service</a
+              <a href="https://www.kunashmedia.com" class="hover:text-white transition-colors"
+                >Developed by Kunash Media Solutions</a
               >
             </div>
           </div>
         </div>
       </div>
     </footer>
-
     <script src="script.js"></script>
     <script>
       //second section animations
