--- a/WTP.html
+++ b/WTP.html
@@ -1041,152 +1041,270 @@
     </section>
 
     <!-- Footer -->
-    <footer class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8 fade-in mobile-pt-12 mobile-pb-6">
-        <!-- Top Border Curve -->
-        <div class="absolute top-0 left-0 right-0 h-8 bg-white rounded-b-full"></div>
+      <footer
+      class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
+    >
+      <!-- Top Border Curve -->
+      <div
+        class="absolute top-0 left-0 right-0 h-8 bg-white rounded-b-full"
+      ></div>
 
-        <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mobile-grid-cols-1 mobile-gap-6">
-                <!-- Company Info with Logo and Address -->
-                <div class="md:col-span-1 mobile-text-center">
-                    <div class="text-white text-lg mobile-text-base">
-                        <p class="font-semibold mb-2">Office Address:</p>
-                        <a href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101" target="_blank" class="hover:text-white text-md transition-colors block mobile-text-sm">
-                            Office No. 301, 7 Bizz Sonigara Business Complex,<br>
-                            Ravet BRT Road, Pune – 412101,<br>
-                            Maharashtra, India.
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Quick Links -->
-                <div class="mobile-text-center">
-                    <h3 class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2 mobile-text-base mobile-mb-4">Quick Links</h3>
-                    <ul class="space-y-3">
-                        <li>
-                            <a href="index.html" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="about.html" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
-                                About Us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="career.html" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
-                                Career
-                            </a>
-                        </li>
-                        <li>
-                            <a href="contact.html" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
-                                Contact
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- Our Services -->
-                <div class="mobile-text-center">
-                    <h3 class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2 mobile-text-base mobile-mb-4">Our Services</h3>
-                    <ul class="space-y-3">
-                        <li>
-                            <a href="services.html#ro" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-tint text-xs mr-2"></i>
-                                RO Plants
-                            </a>
-                        </li>
-                        <li>
-                            <a href="services.html#stp" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-recycle text-xs mr-2"></i>
-                                Sewage Treatment
-                            </a>
-                        </li>
-                        <li>
-                            <a href="services.html#etp" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-industry text-xs mr-2"></i>
-                                Effluent Treatment
-                            </a>
-                        </li>
-                        <li>
-                            <a href="services.html#zld" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-infinity text-xs mr-2"></i>
-                                ZLD Systems
-                            </a>
-                        </li>
-                        <li>
-                            <a href="services.html#softeners" class="text-teal-100 hover:text-white transition-colors flex items-center group mobile-justify-center">
-                                <i class="fas fa-filter text-xs mr-2"></i>
-                                Water Softeners
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- Connect With Us -->
-                <div class="mobile-text-center">
-                    <h3 class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2 mobile-text-base mobile-mb-4">Connect With Us</h3>
-                    <div class="space-y-4">
-                        <!-- Phone Numbers -->
-                        <div class="flex items-start mobile-justify-center">
-                            <div class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3">
-                                <i class="fas fa-phone text-white text-xs"></i>
-                            </div>
-                            <div>
-                                <a href="tel:+919921174727" class="text-teal-100 hover:text-white transition-colors block text-sm font-medium mobile-text-xs">+91 9921174727</a>
-                            </div>
-                        </div>
-
-                        <!-- Email Addresses -->
-                        <div class="flex items-start mobile-justify-center">
-                            <div class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1">
-                                <i class="fas fa-envelope text-white text-xs"></i>
-                            </div>
-                            <div>
-                                <a href="mailto:enquiry@tpes.in" class="text-teal-100 hover:text-white transition-colors block text-sm font-medium mobile-text-xs">enquiry@tpes.in</a>
-                                <a href="mailto:info@tpes.in" class="text-teal-100 hover:text-white transition-colors block text-sm font-medium mobile-text-xs">info@tpes.in</a>
-                            </div>
-                        </div>
-
-                        <!-- Social Media Icons -->
-                        <div class="pt-2">
-                            <p class="text-teal-100 text-sm mb-3 mobile-text-xs">Follow us on:</p>
-                            <div class="flex space-x-3 mobile-justify-center">
-                                <a href="#" class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors" title="Facebook">
-                                    <i class="fab fa-facebook-f text-white"></i>
-                                </a>
-                                <a href="#" class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors" title="Twitter">
-                                    <i class="fab fa-twitter text-white"></i>
-                                </a>
-                                <a href="#" class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors" title="LinkedIn">
-                                    <i class="fab fa-linkedin-in text-white"></i>
-                                </a>
-                                <a href="#" class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors" title="Instagram">
-                                    <i class="fab fa-instagram text-white"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+          <!-- Company Info with Logo and Address -->
+          <div class="md:col-span-1">
+            <!-- <div class="mb-6">
+              <img
+                src="Images/Logo.png"
+                alt="Terrapure Logo"
+                class="h-20 bg-white p-2 rounded-lg shadow-md"
+              />
+            </div> -->
+            <!-- <p class="text-teal-100 mb-4 text-sm leading-relaxed">
+              Leading environmental solutions provider specializing in water and
+              wastewater treatment systems for sustainable future.
+            </p> -->
+            <div class="text-white text-lg">
+              <p class="font-semibold mb-2">Office Address:</p>
+              <a
+                href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101"
+                target="_blank"
+                class="hover:text-white text-md transition-colors block"
+              >
+                Office No. 301, 7 Bizz Sonigara Business Complex,<br />
+                Ravet BRT Road, Pune – 412101,<br />
+                Maharashtra, India.
+              </a>
             </div>
+          </div>
 
-            <!-- Bottom Section -->
-            <div class="border-t border-teal-700 mt-12 pt-8 mobile-mt-8 mobile-pt-6">
-                <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
-                    <div class="text-teal-200 text-sm text-center md:text-left mobile-text-xs">
-                        <p>&copy; 2025 Terrapure Environment Services Pvt. Ltd. All rights reserved.</p>
-                    </div>
-                    <div class="flex space-x-6 text-sm text-teal-200 mobile-text-xs mobile-space-x-4">
-                        <a href="#" class="hover:text-white transition-colors">Privacy Policy</a>
-                        <a href="#" class="hover:text-white transition-colors">Terms of Service</a>
-                    </div>
+          <!-- Quick Links -->
+          <div>
+            <h3
+              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2"
+            >
+              Quick Links
+            </h3>
+            <ul class="space-y-3">
+              <li>
+                <a
+                  href="index.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Home
+                </a>
+              </li>
+              <li>
+                <a
+                  href="about.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  About Us
+                </a>
+              </li>
+              <li>
+                <a
+                  href="clients.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Clients
+                </a>
+              </li>
+              <li>
+                <a
+                  href="career.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Career
+                </a>
+              </li>
+              <li>
+                <a
+                  href="contact.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Contact
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Our Services -->
+          <div>
+            <h3
+              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2"
+            >
+              Our Services
+            </h3>
+            <ul class="space-y-3">
+              <li>
+                <a
+                  href="RO.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i class="fas fa-tint text-xs mr-2"></i>
+                  RO Plants
+                </a>
+              </li>
+              <li>
+                <a
+                  href="sewage.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i class="fas fa-recycle text-xs mr-2"></i>
+                  Sewage Treatment
+                </a>
+              </li>
+              <li>
+                <a
+                  href="ETP.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i class="fas fa-industry text-xs mr-2"></i>
+                  Effluent Treatment
+                </a>
+              </li>
+              <li>
+                <a
+                  href="ZLD.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i class="fas fa-infinity text-xs mr-2"></i>
+                  ZLD Systems
+                </a>
+              </li>
+              <li>
+                <a
+                  href="water-softener-plant.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i class="fas fa-filter text-xs mr-2"></i>
+                  Water Softeners
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Connect With Us -->
+          <div>
+            <h3
+              class="text-lg font-bold mb-6 text-white border-b border-teal-600 pb-2"
+            >
+              Connect With Us
+            </h3>
+            <div class="space-y-4">
+              <!-- Phone Numbers -->
+              <div class="flex items-start">
+                <div
+                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3"
+                >
+                  <i class="fas fa-phone text-white text-xs"></i>
                 </div>
+                <div>
+                  <a
+                    href="tel:+919921174727"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                    >+91 9921174727</a
+                  >
+                </div>
+              </div>
+
+              <!-- Email Addresses -->
+              <div class="flex items-start">
+                <div
+                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1"
+                >
+                  <i class="fas fa-envelope text-white text-xs"></i>
+                </div>
+                <div>
+                  <a
+                    href="mailto:enquiry@tpes.in"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                    >enquiry@tpes.in</a
+                  >
+                  <a
+                    href="mailto:info@tpes.in"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                    >info@tpes.in</a
+                  >
+                </div>
+              </div>
+
+              <!-- Social Media Icons -->
+              <div class="pt-2">
+                <p class="text-teal-100 text-sm mb-3">Follow us on:</p>
+                <div class="flex space-x-3">
+                  <a
+                    href="#"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                    title="Facebook"
+                  >
+                    <i class="fab fa-facebook-f text-white"></i>
+                  </a>
+                  <a
+                    href="#"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                    title="Twitter"
+                  >
+                    <i class="fab fa-twitter text-white"></i>
+                  </a>
+                  <a
+                    href="#"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                    title="LinkedIn"
+                  >
+                    <i class="fab fa-linkedin-in text-white"></i>
+                  </a>
+                  <a
+                    href="#"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
+                    title="Instagram"
+                  >
+                    <i class="fab fa-instagram text-white"></i>
+                  </a>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+
+        <!-- Bottom Section -->
+        <div class="border-t border-teal-700 mt-12 pt-8">
+          <div
+            class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0"
+          >
+            <div class="text-teal-200 text-sm text-center md:text-left">
+              <p>
+                &copy; 2025 Terrapure Environment Services Pvt. Ltd. All rights
+                reserved.
+              </p>
+            </div>
+            <div class="flex space-x-6 text-sm text-teal-200">
+              <a href="privacypoilcy.html" class="hover:text-white transition-colors"
+                >Privacy Policy</a
+              >
+              <a href="https://www.kunashmedia.com" class="hover:text-white transition-colors"
+                >Developed by Kunash Media Solutions</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script>
