--- a/operation & maintenance.html
+++ b/operation & maintenance.html
@@ -696,7 +696,7 @@
 
  <!-- Footer -->
     <footer
-      class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8 overflow-hidden"
+      class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
     >
       <!-- Top Border Curve -->
       <div
@@ -707,12 +707,23 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <!-- Company Info with Logo and Address -->
           <div class="md:col-span-1">
+            <!-- <div class="mb-6">
+              <img
+                src="Images/Logo.png"
+                alt="Terrapure Logo"
+                class="h-20 bg-white p-2 rounded-lg shadow-md"
+              />
+            </div> -->
+            <!-- <p class="text-teal-100 mb-4 text-sm leading-relaxed">
+              Leading environmental solutions provider specializing in water and
+              wastewater treatment systems for sustainable future.
+            </p> -->
             <div class="text-white text-lg">
               <p class="font-semibold mb-2">Office Address:</p>
               <a
                 href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101"
                 target="_blank"
-                class="hover:text-white text-md transition-colors block text-sm md:text-base"
+                class="hover:text-white text-md transition-colors block"
               >
                 Office No. 301, 7 Bizz Sonigara Business Complex,<br />
                 Ravet BRT Road, Pune – 412101,<br />
@@ -753,6 +764,17 @@
               </li>
               <li>
                 <a
+                  href="clients.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                >
+                  <i
+                    class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
+                  ></i>
+                  Clients
+                </a>
+              </li>
+              <li>
+                <a
                   href="career.html"
                   class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
@@ -786,8 +808,8 @@
             <ul class="space-y-3">
               <li>
                 <a
-                  href="services.html#ro"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group text-sm md:text-base"
+                  href="RO.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-tint text-xs mr-2"></i>
                   RO Plants
@@ -795,8 +817,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#stp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group text-sm md:text-base"
+                  href="sewage.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-recycle text-xs mr-2"></i>
                   Sewage Treatment
@@ -804,8 +826,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#etp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group text-sm md:text-base"
+                  href="ETP.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-industry text-xs mr-2"></i>
                   Effluent Treatment
@@ -813,8 +835,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#zld"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group text-sm md:text-base"
+                  href="ZLD.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-infinity text-xs mr-2"></i>
                   ZLD Systems
@@ -822,8 +844,8 @@
               </li>
               <li>
                 <a
-                  href="services.html#softeners"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group text-sm md:text-base"
+                  href="water-softener-plant.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
                 >
                   <i class="fas fa-filter text-xs mr-2"></i>
                   Water Softeners
@@ -843,7 +865,7 @@
               <!-- Phone Numbers -->
               <div class="flex items-start">
                 <div
-                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 flex-shrink-0"
+                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3"
                 >
                   <i class="fas fa-phone text-white text-xs"></i>
                 </div>
@@ -859,7 +881,7 @@
               <!-- Email Addresses -->
               <div class="flex items-start">
                 <div
-                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1 flex-shrink-0"
+                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1"
                 >
                   <i class="fas fa-envelope text-white text-xs"></i>
                 </div>
@@ -883,28 +905,28 @@
                 <div class="flex space-x-3">
                   <a
                     href="#"
-                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors flex-shrink-0"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
                     title="Facebook"
                   >
                     <i class="fab fa-facebook-f text-white"></i>
                   </a>
                   <a
                     href="#"
-                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors flex-shrink-0"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
                     title="Twitter"
                   >
                     <i class="fab fa-twitter text-white"></i>
                   </a>
                   <a
                     href="#"
-                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors flex-shrink-0"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
                     title="LinkedIn"
                   >
                     <i class="fab fa-linkedin-in text-white"></i>
                   </a>
                   <a
                     href="#"
-                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors flex-shrink-0"
+                    class="w-10 h-10 bg-teal-700 hover:bg-teal-600 rounded-full flex items-center justify-center transition-colors"
                     title="Instagram"
                   >
                     <i class="fab fa-instagram text-white"></i>
@@ -927,11 +949,11 @@
               </p>
             </div>
             <div class="flex space-x-6 text-sm text-teal-200">
-              <a href="#" class="hover:text-white transition-colors"
+              <a href="privacypoilcy.html" class="hover:text-white transition-colors"
                 >Privacy Policy</a
               >
-              <a href="#" class="hover:text-white transition-colors"
-                >Terms of Service</a
+              <a href="https://www.kunashmedia.com" class="hover:text-white transition-colors"
+                >Developed by Kunash Media Solutions</a
               >
             </div>
           </div>
