--- a/about.html
+++ b/about.html
@@ -687,7 +687,7 @@
   <!-- ✅ Centered Watermark Logo Background -->
   <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
     <img
-      src="Images/logo.png"
+      src="Images/Logo.png"
       alt="Watermark"
       class="opacity-10 w-[300px] sm:w-[420px] md:w-[520px] lg:w-[650px] object-contain mix-blend-multiply"
     />
