--- a/contact.html
+++ b/contact.html
@@ -634,7 +634,7 @@
             >
               <!-- ✅ Watermark Logo Top-Right -->
               <img
-                src="Images/logo.png"
+                src="Images/Logo.png"
                 alt="Watermark Logo"
                 class="absolute top-3 right-3 w-24 md:w-32 opacity-80 pointer-events-none select-none z-0"
               />
