logo updated and ui changes updated

--- a/ETP.html
+++ b/ETP.html
@@ -335,7 +335,7 @@
               <img
                 src="Images/Logo.png"
                 alt="Terrapure Logo"
-                class="h-20 w-auto mr-3 rounded-md transition-transform duration-300 hover:scale-105"
+                class="h-20 w-auto mr-3 mt-4 rounded-md transition-transform duration-300 hover:scale-105"
               />
             </a>
           </div>
