--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
               <img
                 src="Images/Logo.png"
                 alt="Terrapure Logo"
-                class="h-20 w-auto mr-3 rounded-md transition-transform duration-300 hover:scale-105"
+                class="h-20 w-auto mr-3 mt-4 rounded-md transition-transform duration-300 hover:scale-105"
               />
             </a>
           </div>
@@ -485,9 +485,9 @@
           </p>
 
           <!-- Scroll Indicator -->
-          <div class="mt-12 animate-bounce">
+          <!-- <div class="mt-12 animate-bounce">
             <i class="fas fa-chevron-down text-2xl opacity-70"></i>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
