--- a/clients.html
+++ b/clients.html
@@ -575,6 +575,76 @@
               class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
             />
           </div>
+          <div
+            class="client-logo bg-white p-6 rounded-xl shadow-md flex items-center justify-center h-32 fade-up"
+            style="animation-delay: 1.3s"
+          >
+            <img
+              src="Images/client13.jpg"
+              alt="Client 13"
+              class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
+            />
+          </div>
+          <div
+            class="client-logo bg-white p-6 rounded-xl shadow-md flex items-center justify-center h-32 fade-up"
+            style="animation-delay: 1.4s"
+          >
+            <img
+              src="Images/client14.png"
+              alt="Client 14"
+              class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
+            />
+          </div>
+          <div
+            class="client-logo bg-white p-6 rounded-xl shadow-md flex items-center justify-center h-32 fade-up"
+            style="animation-delay: 1.5s"
+          >
+            <img
+              src="Images/client15.jpg"
+              alt="Client 15"
+              class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
+            />
+          </div>
+          <div
+            class="client-logo bg-white p-6 rounded-xl shadow-md flex items-center justify-center h-32 fade-up"
+            style="animation-delay: 1.6s"
+          >
+            <img
+              src="Images/client16.png"
+              alt="Client 16"
+              class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
+            />
+          </div>
+          <div
+            class="client-logo bg-white p-6 rounded-xl shadow-md flex items-center justify-center h-32 fade-up"
+            style="animation-delay: 1.7s"
+          >
+            <img
+              src="Images/client17.jpg"
+              alt="Client 17"
+              class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
+            />
+          </div>
+          <div
+            class="client-logo bg-white p-6 rounded-xl shadow-md flex items-center justify-center h-32 fade-up"
+            style="animation-delay: 1.8s"
+          >
+            <img
+              src="Images/client18.png"
+              alt="Client 18"
+              class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
+            />
+          </div>
+          <div
+            class="client-logo bg-white p-6 rounded-xl shadow-md flex items-center justify-center h-32 fade-up"
+            style="animation-delay: 1.9s"
+          >
+            <img
+              src="Images/client19.jpg"
+              alt="Client 19"
+              class="max-h-20 md:max-h-24 object-contain transition-transform duration-300 hover:scale-105"
+            />
+          </div>
         </div>
       </div>
     </section>
@@ -831,7 +901,7 @@
     </section>
 
     <!-- Footer -->
-   <footer
+    <footer
       class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
     >
       <!-- Top Border Curve -->
@@ -1085,10 +1155,14 @@
               </p>
             </div>
             <div class="flex space-x-6 text-sm text-teal-200">
-              <a href="privacypoilcy.html" class="hover:text-white transition-colors"
+              <a
+                href="privacypoilcy.html"
+                class="hover:text-white transition-colors"
                 >Privacy Policy</a
               >
-              <a href="https://www.kunashmedia.com" class="hover:text-white transition-colors"
+              <a
+                href="https://www.kunashmedia.com"
+                class="hover:text-white transition-colors"
                 >Developed by Kunash Media Solutions</a
               >
             </div>
